# Pagy

./: .gitignore  CMakeLists.txt  Makefile  README.md  lorem_ipsum.txt
.github/workflows/: build.yml
src/: main.c
src/includes/: file_reader.h  formatting.h  output.h  unicode8.h
src/modules/: file_reader.c  formatting.c  output.c  unicode8.c
texts/: lorem_ipsum.txt  supercalifragilistichespiralidoso.txt
